@@ -1,4 +1,4 @@
-#serial 8
+#serial 9
 
 # Copyright (C) 2003, 2004, 2005 Free Software Foundation, Inc.
 # This file is free software; the Free Software Foundation
@@ -12,7 +12,6 @@ AC_DEFUN([AC_FUNC_CANONICALIZE_FILE_NAME],
     AC_LIBSOURCES([canonicalize.c, canonicalize.h])
     AC_LIBOBJ([canonicalize])
 
-    AC_REQUIRE([AC_HEADER_STDC])
-    AC_CHECK_HEADERS(string.h sys/param.h)
+    AC_CHECK_HEADERS(sys/param.h)
     AC_CHECK_FUNCS(resolvepath canonicalize_file_name)
   ])
