@@ -1,4 +1,4 @@
-# xgetcwd.m4 serial 4
+#serial 5
 dnl Copyright (C) 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
