@@ -1,3 +1,12 @@
+2005-10-03 Derek Price  <derek@ximbiot.com>
+
+	* fcntl-safer.m4, socklen.m4: New files from GNULIB.
+	* canonicalize.m4, chdir-long.m4, dup2.m4, fnmatch.m4, ftruncate.m4,
+	getaddrinfo.m4, getcwd.m4, getdate.m4, getpagesize.m4, gnulib-comp.m4,
+	mbchar.m4, mbiter.m4, mkstemp.m4, mktime.m4, nanosleep.m4, openat.m4,
+	pathmax.m4, regex.m4, save-cwd.m4, strcase.m4, strstr.m4,
+	unistd-safer.m4, xgetcwd.m4, xreadlink.m4: Update from GNULIB.
+
 2005-09-26  Derek Price  <derek@ximbiot.com>
 
 	[bug #14639]
